# Odin

./: .env.example  1.txt  2.txt  README.md  README_CN.md  odin.py  odin_ai_code_research_system_—_full_technical_analysis_32c347f6.plan.md  pyproject.toml
.odin/audit/: gateway-session.jsonl
:memory:/: rag.db  rag.db-shm
agent/: __init__.py  checkpoint.py  config.py  core.py  error_handler.py  llm_adapter.py  loop.py  merger.py  messages.py  observer.py  planner.py  retry.py  runtime.py  sandbox.py  skill_agent.py  state.py
agent/evaluation/: __init__.py  engine.py  reports.py
agent/observability/: __init__.py  logger.py  metrics.py  tracer.py
agent/task_manager/: __init__.py  queue.py  scheduler.py  state.py  worker.py
agent/verification/: __init__.py  engine.py  rules.py
benchmarks/: eval.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  analyze.py  list_skills.py  list_workflows.py  serve.py
core/: __init__.py  errors.py  execution_context.py  pipeline_executor.py  prompt_runner.py  schema_validator.py  skill_loader.py  workflow_orchestrator.py
docs/: api.html  architecture.html  cli.html  comparison.html  configuration.html  evidence.html  getting-started.html  index.html  skills.html  tools.html  why.html  workflows.html
docs/api/: cli.html  rest.html
docs/architecture/: components.html  data-flow.html  overview.html
docs/assets/: animations.js  nav.js  style.css
docs/development/: contributing.html  setup.html
docs/examples/: advanced.html  basic.html
docs/getting-started/: configuration.html  installation.html  quickstart.html
docs/guide/: advanced-usage.html  core-concepts.html  faq.html  troubleshooting.html
docs/roadmap/: changelog.html  roadmap.html  vision.html
examples/: run_workflow.py
mcp/: __init__.py  client.py
memory/: __init__.py  evidence_store.py  longterm.py  memory_store.py  models.py  query.py  working.py
prompts/base/: constraints.md  evidence_policy.md  system_prompt.md
prompts/report/: research_report.md
rag/: store.py
skills/attack_surface_mapping/: input_schema.json  output_schema.json  prompt.md  skill.yaml
skills/auth_logic_detection/: input_schema.json  output_schema.json  prompt.md  skill.yaml
skills/call_graph_trace/: input_schema.json  output_schema.json  prompt.md  skill.yaml
skills/data_structure_extraction/: input_schema.json  output_schema.json  prompt.md  skill.yaml
skills/dependency_analysis/: input_schema.json  (+3 more)
source-prompts/: 00_INDEX.md  00_master.md  00_usage_guide.md  README.md
tests/: conftest.py
tools/: __init__.py  base.py  executor.py  registry.py  router.py
(+79 files in other folders)
