[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odin-ai-research"
version = "0.1.0"
description = "AI Code Research System — Evidence-backed code analysis framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Core Team", email = "core@example.com" }
]
keywords = ["code-analysis", "security", "vulnerability-research", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0",
    "openai>=1.0",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
